crates/parser/tests/snapshots/statements__aspect_decl_with_grain.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(r#\"DECLARE ASPECT meaning WITH $${\"type\": \"object\"}$$ AS FACT ON TABLE, COLUMN, RELATIONSHIP;\"#).expect(\"must parse\")"
---
[
    Declare(
        Aspect(
            AspectDecl {
                name: Ident {
                    value: "meaning",
                    quote_style: None,
                    span: Span(Location(1,16)..Location(1,23)),
                },
                schema: JsonBody {
                    value: Object {
                        "type": String("object"),
                    },
                    raw: "{\"type\": \"object\"}",
                },
                kind: Fact,
                grains: [
                    Table,
                    Column,
                    Relationship,
                ],
                condition: None,
            },
        ),
    ),
]
