crates/parser/tests/snapshots/statements__function_decl_accepts_aspects.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE FUNCTION outliers FOR GLOBAL AS $$let p = context.column_profile; #{iqr: fences(p)}$$ ACCEPTS (column_profile) RETURNS outlier_profile;\").expect(\"must parse\")"
---
[
    Declare(
        Function(
            FunctionDecl {
                name: Ident {
                    value: "outliers",
                    quote_style: None,
                    span: Span(Location(1,18)..Location(1,26)),
                },
                scope: Global,
                script: "let p = context.column_profile; #{iqr: fences(p)}",
                accepts: [
                    Ident {
                        value: "column_profile",
                        quote_style: None,
                        span: Span(Location(1,104)..Location(1,118)),
                    },
                ],
                returns: Some(
                    Ident {
                        value: "outlier_profile",
                        quote_style: None,
                        span: Span(Location(1,128)..Location(1,143)),
                    },
                ),
            },
        ),
    ),
]
