crates/parser/tests/snapshots/statements__function_decl_detector.snap
---
source: crates/parser/tests/statements.rs
expression: "GlossqlParser ::\nparse_sql(\"DECLARE FUNCTION slot_entropy FOR fin AS $$#{score: spread(context.slots)}$$;\").expect(\"must parse\")"
---
[
    Declare(
        Function(
            FunctionDecl {
                name: Ident {
                    value: "slot_entropy",
                    quote_style: None,
                    span: Span(Location(1,18)..Location(1,30)),
                },
                scope: Dataset(
                    Ident {
                        value: "fin",
                        quote_style: None,
                        span: Span(Location(1,35)..Location(1,38)),
                    },
                ),
                script: "#{score: spread(context.slots)}",
                accepts: [],
                returns: None,
            },
        ),
    ),
]
